--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="joseeduardo.com.projectmemorygame" >
+          package="joseeduardo.com.projectmemorygame">
 
     <application
         android:allowBackup="true"
@@ -12,9 +12,9 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
@@ -24,7 +24,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="joseeduardo.com.projectmemorygame.MainScreen" />
+                android:value="joseeduardo.com.projectmemorygame.MainScreen"/>
         </activity>
         <activity
             android:name=".ui.LostScreen"
@@ -33,7 +33,15 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="joseeduardo.com.projectmemorygame.ui.Game" />
+                android:value="joseeduardo.com.projectmemorygame.ui.Game"/>
+        </activity>
+        <activity
+            android:name=".ui.HowToPlay"
+            android:label="@string/title_activity_how_to_play"
+            android:parentActivityName=".ui.MainScreen">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="joseeduardo.com.projectmemorygame.ui.MainScreen"/>
         </activity>
     </application>
 
