--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "joseeduardo.com.projectmemorygame"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 10
-        versionName "2.0"
+        versionCode 11
+        versionName "2.1"
     }
     buildTypes {
         release {
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
