--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:hardwareAccelerated="false"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/AppTheme">
@@ -26,7 +25,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="joseeduardo.com.projectmemorygame.MainScreen"/>
+                android:value="joseeduardo.com.projectmemorygame.ui.MainScreen"/>
         </activity>
         <activity
             android:name=".ui.LostScreen"
@@ -44,10 +43,6 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="joseeduardo.com.projectmemorygame.ui.MainScreen"/>
-        </activity>
-        <activity
-            android:name=".ui.Test"
-            android:label="@string/title_activity_test">
         </activity>
     </application>
 
